flag with relation
