# public/api/docs/openapi.json
@@ -122,18 +122,7 @@
                 "summary": "Find all Route",
                 "description": "Returns a all Route",
                 "operationId": "getRouteAll",
-                "parameters": [
-                    {
-                        "name": "relations",
-                        "in": "query",
-                        "description": "Relations of Route to return",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "example": "true"
-                        }
-                    }
-                ],
+
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -401,18 +390,7 @@
                 "summary": "Find all Page",
                 "description": "Returns a all Page",
                 "operationId": "getPageAll",
-                "parameters": [
-                    {
-                        "name": "relations",
-                        "in": "query",
-                        "description": "Relations of Page to return",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "example": "true"
-                        }
-                    }
-                ],
+
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -681,18 +659,7 @@
                 "summary": "Find all PageContent",
                 "description": "Returns a all PageContent",
                 "operationId": "getPagePageContent",
-                "parameters": [
-                    {
-                        "name": "relations",
-                        "in": "query",
-                        "description": "Relations of PageContent to return",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "example": "true"
-                        }
-                    }
-                ],
+
                 "responses": {
                     "200": {
                         "description": "successful operation",
